(after removing the "K"):

	https://kenai.com/bugzilla/


		  CHANGES IN THE 1.5 RELEASE
		  --------------------------
The following bugs have been fixed in the 1.5 release.

K 5682	add FetchProfile.Item.SIZE
K 5683	fix protected fields in final classes in javax.mail.search
K 5684	add MimeMultipart(String subtype, BodyPart... bps) constructor
K 5686	ParameterList needs to support use by IMAP
K 5687	ContentType.toString & ContentDisposition.toString shouldn't return null
K 5689	add Transport.send(msg, username, password) method
K 5690	add MimeMessage.setFrom(String) method
K 5691	add Message.getSession() method
K 5692	MimeBodyPart.attachFile should set the disposition to ATTACHMENT
K 5693	add MimeMessage.reply(replyToAll, setAnswered) method
K 5694	add "next" methods to HeaderTokenizer to help parsing bad headers
K 5743	add @MailSessionDefinition and @MailSessionDefinitions for Java EE 7
K 5769	make cachedContent field protected in MimeMessage and MimeBodyPart
K 5770	make MimeMultipart fields protected to allow subclassing


		  CHANGES IN THE 1.4.6 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.6 release.

K  4906	IMAP Store socket leak on connect with ProtocolException
K  5086	STARTTLS when already using SSL may cause connection to fail
K  5090	Yahoo: Error reading emails containing "undisclosed recipients"
K  5233	Infinite loop if Quota information is not correctly reported by server
<no id>	add mail.imap.ignorebodystructuresize to work around server bugs
<no id>	add "gimap" EXPERIMENTAL Gmail IMAP provider
<no id>	add isSSL() method to all protocol providers
<no id>	add support for debug output using java.util.logging
<no id>	avoid NullPointerException when encountering a bad Content-Type


		  CHANGES IN THE 1.4.5 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.5 release.

7021190	MimeMessage.setRecipients(type, String) does not accept null address