@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -53,17 +53,32 @@ public class AuthenticationFailedException extends MessagingException {
     private static final long serialVersionUID = 492080754054436511L;
 
     /**
-     * Constructor
+     * Constructs an AuthenticationFailedException.
      */
     public AuthenticationFailedException() {
 	super();
     }
 
     /**
-     * Constructor
+     * Constructs an AuthenticationFailedException with the specified
+     * detail message.
+     *
      * @param message	The detailed error message
      */
     public AuthenticationFailedException(String message) {
 	super(message);
+    }
+
+    /**
+     * Constructs an AuthenticationFailedException with the specified
+     * detail message and embedded exception.  The exception is chained
+     * to this exception.
+     *
+     * @param message	The detailed error message
+     * @param e		The embedded exception
+     * @since		JavaMail 1.5
+     */
+    public AuthenticationFailedException(String message, Exception e) {
+	super(message, e);
     }
 }
